--- a/wang-blog-client/package.json
+++ b/wang-blog-client/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
         "axios": "^1.7.7",
-        "element-plus": "^2.8.3",
+        "el-cool": "^0.0.4",
         "html2canvas": "^1.4.1",
         "pinia": "^2.2.2",
         "sass": "^1.78.0",
