--- a/wang-blog-server/package.json
+++ b/wang-blog-server/package.json
@@ -14,6 +14,8 @@
     "license": "ISC",
     "dependencies": {
         "@types/multer": "^1.4.12",
+        "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "express-jwt": "^8.4.1",
         "jsonwebtoken": "^9.0.2",
@@ -21,8 +23,7 @@
         "mysql": "^2.18.1",
         "typescript": "^5.5.3",
         "uuid": "^9.0.0",
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.4.5"
+        "wang-blog-client": "workspace:^"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
